src/objects/Apttus_Config2__ChargeGroupMember__c.object
<CustomObject>
    <description>Represents the mapping between a charge group and the charge types associated with the group..</description>
    <fields>
        <fullName>Apttus_Config2__ChargeGroupId__c</fullName>
        <description>ID of the charge group to which this charge type is associated</description>
        <inlineHelpText>ID of the charge group to which this charge type is associated</inlineHelpText>
        <label>Charge Group</label>
        <referenceTo>Apttus_Config2__ChargeGroup__c</referenceTo>
        <relationshipLabel>Members</relationshipLabel>
        <relationshipName>Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChargeTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the charge type associated with the group</description>
        <inlineHelpText>ID of the charge type associated with the group</inlineHelpText>
        <label>Charge Type</label>
        <referenceTo>Apttus_Config2__ChargeType__c</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The charge type process sequence</description>
        <inlineHelpText>The charge type process sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Charge Group Member</label>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>Member Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charge Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>